fixed small annoyance on mobile landscape view and edited labels on some forms

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,7 @@ footer {
   background: var(--light-color);
 }
 
-.footer > span {
+.footer>span {
   display: block;
   color: black;
   padding: 10px 0px 10px 30px;
@@ -178,16 +178,16 @@ img {
   border-top: 1px solid #e5e5e5;
 }
 
-.modal-footer .btn + .btn {
+.modal-footer .btn+.btn {
   margin-bottom: 0;
   margin-left: 5px;
 }
 
-.modal-footer .btn-group .btn + .btn {
+.modal-footer .btn-group .btn+.btn {
   margin-left: -1px;
 }
 
-.modal-footer .btn-block + .btn-block {
+.modal-footer .btn-block+.btn-block {
   margin-left: 0;
 }
 
@@ -331,16 +331,30 @@ ol {
   margin: 1.3rem 0 2rem 0;
 }
 
-@media (min-width: 700px) {
-  ol > li {
+@media (min-width: 850px) {
+  ol>li {
     counter-increment: counter;
     display: flex;
     padding: 10px;
     width: 50%;
   }
+
+  .team-btn {
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: calc(50% + 200px);
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
   .mobileWarning {
     display: none;
   }
+
+
   .mainGrid {
     position: relative;
     height: 100%;
@@ -354,24 +368,34 @@ ol {
   }
 }
 
-@media (max-width: 700px) {
-  ol > li {
+@media (max-width: 850px) {
+  ol>li {
     counter-increment: counter;
     display: flex;
     padding: 10px;
     width: 90%;
   }
 
+  .reset-btn {
+    display: none !important;
+  }
+
+  .team-btn {
+    display: none !important;
+  }
+
   .mobileWarning {
     display: block;
+    margin-top: 30%;
   }
+
   .mainGrid {
     display: none;
   }
 }
 
-ol > li::before {
-  content: "0" counter(counter);
+ol>li::before {
+  content: "0"counter(counter);
   font-size: 2rem;
   font-weight: bold;
   margin-right: 0.5rem;
@@ -398,18 +422,18 @@ ol > li::before {
     "TeamTwoUp TeamTwoDown . TeamOneUp TeamOneDown";
 }
 
-.Questioncard > button {
+.Questioncard>button {
   max-width: 100px;
   font-size: 0.8em;
   margin: auto 5px 0 5px;
 }
 
-.Questioncard > .question {
+.Questioncard>.question {
   font-size: 2em;
   line-height: 1.3em;
 }
 
-.Questioncard > .answer {
+.Questioncard>.answer {
   vertical-align: middle;
   font-size: 1.3em;
 }
@@ -634,15 +658,7 @@ ol > li::before {
   float: right;
 }
 
-.team-btn {
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-  top: calc(50% + 200px);
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+
 
 .teamNames {
   top: 50%;
